vcs/specs/parser/fail/statements/expr_stmt_trailing_comma.vr
// @test: parse-fail
// @level: L0
// @tags: parser, statements, expression, comma, error
// @description: Test expression statement with trailing comma
// @expected-error: E048

fn test() {
    foo(),;
}
